# lakebridge-rca

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  sync_skill.sh
.github/workflows/: ci.yml
docs/: one_pager_1_current_project.md  one_pager_2_global_asset.md  pitch_deck_layout.md
migration/: README.md  run_sql.py  scenarios.md  scenarios.yaml
migration/edge_cases/: 40_edge_source.sql  41_edge_target.sql
migration/pilot/: README.md  table_manifest.yml
migration/pilot/source_snowflake/: agg_daily_sales.sql  dim_customer.sql  dim_product.sql  dim_store.sql  fact_order_items.sql  fact_orders.sql
migration/pilot/target_databricks/: agg_daily_sales.sql  dim_customer.sql  dim_product.sql  dim_store.sql  fact_order_items.sql  fact_orders.sql
migration/pipeline/: 20_bronze_ingest.py  21_silver_transform.sql  22_gold_aggregate.sql  23_incremental_merge.py  databricks.yml
migration/recon/: 30_reconcile_config.json
migration/source_sim/: 02_create_source_sim.sql
migration/source_sql/: 01_source_ddl.sql
rca_engine/: __init__.py  analyze.py  classify.py  cli.py  codecorr.py  drilldown.py  ingest.py  lineage.py  report.py
rca_engine/probes/: __init__.py  complex.py  nullbool.py  numeric.py  temporal.py
scripts/: validate_scenarios.py
skill/rca-recon/: SKILL.md  config.yml
skill/rca-recon/rca_engine/: analyze.py  classify.py  cli.py  drilldown.py  freshness.py  ingest.py  lakebridge.py  models.py  report.py  rowpattern.py  runners.py
skill/rca-recon/rca_engine/knowledge/: __init__.py  base.py  snowflake.yaml
skill/rca-recon/rca_engine/probes/: complex.py  numeric.py  string.py  temporal.py
skill/rca-recon/references/: taxonomy.md
skill/rca-recon/scripts/: run_rca.py
tests/: conftest.py  test_classify_paths.py  test_lakebridge.py  test_probes.py  test_report.py  test_scenarios_unit.py
