[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rca-engine"
version = "0.1.0"
description = "Automated root-cause analysis of Lakebridge reconciliation mismatches for data-warehouse migrations (source-agnostic, Snowflake-first)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Runtime helpers used when executing against a Databricks workspace.
databricks = [
    "databricks-sql-connector>=3.0.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
rca-run = "rca_engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["rca_engine"]

[tool.ruff]
line-length = 100
target-version = "py310"
