[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rca-engine"
version = "0.1.0"
description = "Automated root-cause analysis of Lakebridge reconciliation mismatches for data-warehouse migrations (source-agnostic, Snowflake-first)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["databricks", "lakebridge", "reconciliation", "migration", "rca", "genie-code", "snowflake"]
authors = [{ name = "RCA Genie-Code Skill contributors" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.urls]
Homepage = "https://github.com/ankitad-db/lakebridge-rca"
Repository = "https://github.com/ankitad-db/lakebridge-rca"
Issues = "https://github.com/ankitad-db/lakebridge-rca/issues"

[project.optional-dependencies]
# Runtime helpers used when executing against a Databricks workspace.
databricks = [
    "databricks-sql-connector>=3.0.0",
]
# Code-aware RCA: parse Lakebridge transpile output for per-column transforms.
# Optional — the engine degrades to data-driven RCA if sqlglot is absent.
code = [
    "sqlglot>=25.0",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[project.scripts]
rca-run = "rca_engine.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["rca_engine"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
# Line length is advisory (kept at 100 above); do not fail CI on it.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# Databricks notebooks: `spark` and `dbutils` are runtime-injected globals.
"migration/pipeline/*.py" = ["F821"]
# Entry scripts bootstrap sys.path before importing the engine (intentional E402).
"scripts/*.py" = ["E402"]
"skill/rca-recon/scripts/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "tests"]
addopts = "-q"
